--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         >
             <div class="wrapper clearfix">
 
-                <h1 class="title">TECH.C <br />College</h1>
+                <h1 class="title">TECH.C TEST TEST<br />College</h1>
                 <p class="intro">Tokyo Design Technology Center College.</p>
 
             </div>
